fix:search input overflow

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ background: #222;
 
 }
 .search input{
+    width: 70%;
     border: 0;
     outline: 0;
     background-color: #ebfffc;
@@ -41,6 +42,7 @@ background: #222;
     font-size: 18px;
 }
 .search button{
+    width: 20%;
     border: 0;
     outline: 0;
     background-color: #ebfffc;
